--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "blog-dev-new-react",
-  "private": true,
-  "engines": {
-    "node": ">=16 <18"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build && next export",
-    "start": "next start",
-    "lint": "next lint",
-    "use": "nvm use v16.14.2"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.36",
-    "@fortawesome/free-solid-svg-icons": "^5.15.4",
-    "@fortawesome/react-fontawesome": "^0.1.16",
-    "next": "12.0.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-icons": "^4.3.1"
-  },
-  "devDependencies": {
-    "eslint": "7.32.0",
-    "eslint-config-next": "12.0.3"
-  }
+	"name": "blog-dev-new-react",
+	"private": true,
+	"engines": {
+		"node": ">=20"
+	},
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build && next export",
+		"start": "next start",
+		"lint": "next lint",
+		"use": "nvm use v16.14.2"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-svg-core": "^1.2.36",
+		"@fortawesome/free-solid-svg-icons": "^5.15.4",
+		"@fortawesome/react-fontawesome": "^0.1.16",
+		"next": "^13.5.11",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-icons": "^4.3.1"
+	},
+	"devDependencies": {
+		"eslint": "7.32.0",
+		"eslint-config-next": "^13.5.11"
+	}
 }
